--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,31 +1,27 @@
-<%= form_for(@photo) do |f| %>
+<%= form_for([@photo.vacation, @photo]) do |f| %>
   <% if @photo.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@photo.errors.count, "error") %> prohibited this photo from being saved:</h2>
 
       <ul>
-      <% @photo.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% @photo.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
       <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
+    <%= f.label :descrioption %><br />
+    <%= f.text_field :descrioption %>
+  </div>
+  <div class="field">
+    <%= f.label :user_id %><br />
     <%= f.number_field :user_id %>
-  </div>
-  <div class="field">
-    <%= f.label :vacation_id %><br>
-    <%= f.number_field :vacation_id %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
   </div>
   <div class="actions">
     <%= f.submit %>
