--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Photo</h1>
+<h1>Editing photo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @photo %> |
-<%= link_to 'Back', photos_path %>
+<%= link_to 'Show', [@photo.vacation, @photo] %> |
+<%= link_to 'Back', vacation_photos_path(@photo.vacation) %>
