--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,33 +1,27 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Listing Photos</h1>
+<h1>Listing photos</h1>
 
 <table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>User</th>
-      <th>Vacation</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <tr>
+    <th>Name</th>
+    <th>Descrioption</th>
+    <th>User</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
 
-  <tbody>
-    <% @photos.each do |photo| %>
-      <tr>
-        <td><%= photo.name %></td>
-        <td><%= photo.user_id %></td>
-        <td><%= photo.vacation_id %></td>
-        <td><%= photo.description %></td>
-        <td><%= link_to 'Show', photo %></td>
-        <td><%= link_to 'Edit', edit_photo_path(photo) %></td>
-        <td><%= link_to 'Destroy', photo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+<% @photos.each do |photo| %>
+  <tr>
+    <td><%= photo.name %></td>
+    <td><%= photo.descrioption %></td>
+    <td><%= photo.user_id %></td>
+    <td><%= link_to 'Show', [photo.vacation, photo] %></td>
+    <td><%= link_to 'Edit', edit_vacation_photo_path(photo.vacation, photo) %></td>
+    <td><%= link_to 'Destroy', [photo.vacation, photo], :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
+<% end %>
 </table>
 
-<br>
+<br />
 
-<%= link_to 'New Photo', new_photo_path %>
+<%= link_to 'New Photo', new_vacation_photo_path(params[:vacation_id]) %>
