--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Photo</h1>
+<h1>New photo</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', photos_path %>
+<%= link_to 'Back', vacation_photos_path(@photo.vacation) %>
