--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Looks like you should log in!</h1>
 <p id="notice"><%= notice %></p>
+<p id="flash-notice"><%= flash[:error] %></p>
 <%= render 'form' %>
