--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,15 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Description:</b>
-  <%= @topic.description %>
-</p>
 
 <p>
   <b>Name:</b>
   <%= @topic.name %>
 </p>
 
+<p>
+  <b>Description:</b>
+  <%= @topic.description %>
+</p>
 
-<%= link_to 'Edit', edit_vacation_topic_path(@topic.vacation, @topic) %> |
-<%= link_to 'Back', vacation_topics_path(@topic.vacation) %>
+<%= link_to 'Go Back', vacation_path(@topic.vacation) %>
