--- a/app/views/vacations/edit.html.erb
+++ b/app/views/vacations/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @vacation %> |
-<%= link_to 'Back', vacations_path %>
+<%= link_to 'Back', @vacation %>
