--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', topic_comments_path(@comment.topic) %>
+<%= link_to 'Back', vacation_topic_path(@comment.topic.vacation, @comment.topic) %>
