add attractions link to vactions show

--- a/app/views/vacations/show.html.erb
+++ b/app/views/vacations/show.html.erb
@@ -7,3 +7,4 @@
 <% end %>
 
 <p><%= link_to 'Guest List', vacation_guests_path(@vacation) %> </p>
+<p><%= link_to 'Attractions', vacation_attractions_path(@vacation) %></p>
