Form to edit start and end times works and only appears if topic form is closed

--- a/app/views/vacations/show.html.erb
+++ b/app/views/vacations/show.html.erb
@@ -8,3 +8,8 @@
 
 <p><%= link_to 'Guest List', vacation_guests_path(@vacation) %> </p>
 <p><%= link_to 'Attractions', vacation_attractions_path(@vacation) %></p>
+
+<% if form_is_closed %>
+  <h3>When is the Vacation?</h3>
+  <%= render 'start_end_vacation' %>
+<% end %>
