--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,4 +14,5 @@
 
 <%= render @topic.comments %>
 
-<%= link_to "Write a Comment", new_vacation_topic_comment_path(@topic.vacation, @topic) %>
+<h2>Write a Comment</h2>
+<%= render 'comments/form' %>
