--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,19 +1,14 @@
-<h1>Listing guests</h1>
+<h1>Guests</h1>
 
 <table>
-  <tr>
-    <th>First name</th>
-    <th>Last name</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
 <% @guests.each do |guest| %>
   <tr>
     <td><%= guest.first_name %></td>
     <td><%= guest.last_name %></td>
-    <td><%= link_to 'Remove Guest', [guest.vacation, guest], :confirm => 'Are you sure?', :method => :delete %></td>
+    <% if current_user.is_admin %>
+      <td><%= link_to 'Remove Guest', [guest.vacation, guest], :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
