some minimal meals adds

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -17,6 +17,6 @@
 <h2>Write a Comment</h2>
 <%= render 'comments/form' %>
 
-<% if meal_form? %>
-  <%= render 'meals/calendar' %>
+<% if meal_form? && form_is_closed %>
+  <%= render @vacation.meals %>
 <% end %>
