--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -17,6 +17,25 @@
 <h2>Write a Comment</h2>
 <%= render 'comments/form' %>
 
+  <%= form_for([@topic.vacation, @topic], {:method => 'put'}) do |f| %>
+    <% if @topic.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@topic.errors.count, "error") %> prohibited this topic from being saved:</h2>
+
+        <ul>
+        <% @topic.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="actions">
+      <%= f.hidden_field(:is_open, :value => false) %>
+      <%= f.submit "Close THIS FORM" %>
+    </div>
+  <% end %>
+
 <% if meal_form? && form_is_closed %>
-  <%= render @vacation.meals %>
+
 <% end %>
