--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
 
+<% if @topic.is_open == false %>
+  <h1> This topic is closed </h1>
+<% end %>
 
 <%= link_to 'Go Back', vacation_path(@topic.vacation) %>
 <p>
@@ -14,28 +17,14 @@
 
 <%= render @topic.comments %>
 
-<h2>Write a Comment</h2>
-<%= render 'comments/form' %>
+<% if @topic.is_open == true %>
+  <h2>Write a Comment</h2>
+  <%= render 'comments/form' %>
 
-  <%= form_for([@topic.vacation, @topic], {:method => 'put'}) do |f| %>
-    <% if @topic.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@topic.errors.count, "error") %> prohibited this topic from being saved:</h2>
+  <%= render 'close' %>
+<% end %>
 
-        <ul>
-        <% @topic.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-        </ul>
-      </div>
-    <% end %>
 
-    <div class="actions">
-      <%= f.hidden_field(:is_open, :value => false) %>
-      <%= f.submit "Close THIS FORM" %>
-    </div>
-  <% end %>
-
-<% if meal_form? && form_is_closed %>
+<% if meal_form? && form_is_closed("Where/When") %>
 
 <% end %>
