--- a/app/views/vacations/index.html.erb
+++ b/app/views/vacations/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h3>All Your Vacations</h3>
+<h3>Vacations/Events</h3>
 <%= link_to 'Start a New Vacation', new_vacation_path %>
 
 <table>
