--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <% if current_user %>
       <p>Welcome <%= current_user.first_name %> | <%= link_to "Logout", sessions_destroy_path %> | <%= link_to "Change Password", edit_user_path(current_user) %> | <%= link_to "Home", root_path %></p>
     <% end %>
-    <%= yield %>
+    <div class="main-container">
+      <%= yield %>
+    </div>
   </body>
 </html>
