added bootstrap file

--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -2,6 +2,6 @@
   <div class="actions">
     <%= f.hidden_field(:meal_id, :value => meal_id) %>
     <%= f.hidden_field(:user_id, :value => current_user.id) %>
-    <%= f.submit "Sign up for this meal" %>
+    <%= f.submit value: "Sign up for this meal"%>
   </div>
 <% end %>
