--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,4 @@
  *= require_self
  */
 
-h1, h2, h3, h4, h5, h6, p {
-  font-family: Lato;
-}
+ /*ANYTHING FROM BOOTSTRAP YOU WISH TO OVERWRITE CAN BE DONE HERE*/
