--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,6 +17,6 @@
   </div>
   <div class="actions">
     <%= hidden_field_tag 'user_id', current_user.id %>
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-default'%>
   </div>
 <% end %>
