--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,20 @@
  */
 
  /*ANYTHING FROM BOOTSTRAP YOU WISH TO OVERWRITE CAN BE DONE HERE*/
+ .nav-li {
+   position: relative;
+   top: 10px;
+ }
+
+ h1, h2, h3, h4, h5, h6, a, p {
+   font-family: Lato;
+ }
+
+ .dropdown:hover .dropdown-menu {
+display: block;
+}
+
+.navbar-left {
+  position: relative;
+  left: 20px;
+}
