--- a/app/views/splash/_form.html.erb
+++ b/app/views/splash/_form.html.erb
@@ -1,19 +1,24 @@
-<%= form_for(@user, {:url => '/sessions/new', :method => 'post'}) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="login-container">
+  <%= form_for(@user, {:url => '/sessions/new', :method => 'post'}) do |f| %>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+        <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li<%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+   <% end %>
+
+    <div class='form-signin'>
+      <%= f.label :email, class: "sr-only" %>
+      <%= f.text_field :email, autofocus: "true", placeholder: "Email", class: "form-control" %>
+      <%= f.label :password, class: "sr-only"%>
+      <%= f.password_field :password, placeholder: "Password", class: "form-control"%>
+      <%= f.submit class: "btn btn-default btn-lg btn-block", value: "Sign in"%>
     </div>
-  <% end %>
-
-  <form action="/sessions/new" method="post">
-    <input name="email" placeholder="Email"><br>
-    <input type="password" name="password" placeholder="Password"><br>
-    <input type="submit">
-  </form>
-<% end %>
+   <% end %>
+ </div>
