--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -1,21 +1,40 @@
-<%= form_for(@user, {:url => "/users/#{@user.id}", :method => 'put'}) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<div class="password-container">
+  <h1 class="text-center">Change Your Passowrd</h1>
+  <%= form_for(@user, {:url => "/users/#{@user.id}", :method => 'put'}) do |f| %>
+    <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+        <ul>
+        <% @user.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+
+      <div class="form-group">
+        <%= f.label class: "col-sm-2 control-label", value: "Email" %>
+        <div class="col-sm-10">
+          <%= f.text_field :email, class: "form-control", value: current_user.email %>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">Current Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" name="old_password" placeholder="Current Password">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label">New Password</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" name="password" placeholder="New Password">
+        </div>
+      </div>
+      <div class="col-sm-offset-2">
+        <input class="btn btn-default" type="submit">
+      </div>
+    </form>
   <% end %>
-
-  <form method="post">
-    <input type="hidden" name="_method" value="put">
-    <input name="email" placeholder="Email"><br>
-    <input type="password" name="old_password" placeholder="Old Password"><br>
-    <input type="password" name="password" placeholder="New Password"><br>
-    <input type="submit">
-  </form>
-<% end %>
+</div>
