--- a/app/views/users/_change_password.html.erb
+++ b/app/views/users/_change_password.html.erb
@@ -1,5 +1,5 @@
 <div class="password-container">
-  <h1 class="text-center">Change Your Passowrd</h1>
+  <h3 class="text-center">Change Your Passowrd</h3>
   <%= form_for(@user, {:url => "/users/#{@user.id}", :method => 'put'}) do |f| %>
     <% if @user.errors.any? %>
       <div id="error_explanation">
@@ -13,28 +13,15 @@
       </div>
     <% end %>
 
-
-      <div class="form-group">
-        <%= f.label class: "col-sm-2 control-label", value: "Email" %>
-        <div class="col-sm-10">
-          <%= f.text_field :email, class: "form-control", value: current_user.email %>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-2 control-label">Current Password</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" name="old_password" placeholder="Current Password">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-2 control-label">New Password</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" name="password" placeholder="New Password">
-        </div>
-      </div>
-      <div class="col-sm-offset-2">
-        <input class="btn btn-default" type="submit">
-      </div>
-    </form>
+    <div class="form-password">
+      <%= f.label :email, class: "sr-only"%>
+      <%= f.text_field :email, class: "form-control", value: current_user.email %>
+      <%= f.label :password, class: "sr-only" %>
+      <%= f.password_field :old_password, class: "form-control", placeholder: "Current Password", autofocus: "true" %>
+      <%= f.label :password, class: "sr-only" %>
+      <%= f.password_field :password, class: "form-control", placeholder: "New Password" %>
+      <%= f.submit value: "Change Passoword", class: "btn btn-default btn-lg btn-block" %>
+    </div>
   <% end %>
+  <p class="text-left notation"><small>You can always change it again later!</small></p>
 </div>
