--- a/app/views/vacations/_vacation_item.html.erb
+++ b/app/views/vacations/_vacation_item.html.erb
@@ -1,1 +1,6 @@
-<p> - <%= link_to vacation.name, vacation %></p>
+<div class="vacation-item col-md-4">
+  <p><%= link_to vacation.name, vacation %></p>
+  <% if vacation.has_start_and_end? %>
+    <p><%= vacation.start.strftime("%b %e") %> - <%= vacation.end.strftime("%b %e") %></p>
+  <% end %>
+</div>
