--- a/app/views/vacations/index.html.erb
+++ b/app/views/vacations/index.html.erb
@@ -2,7 +2,7 @@
 <h3>Vacations/Events</h3>
 <%= link_to 'Start a New Vacation', new_vacation_path %>
 
-<div class="all-vacations-container">
+<div class="all-vacations-container col-md-8 col-md-offset-3">
   <% ordered_resource(@vacations).each do |vacation| %>
     <div class="single-vacation">
       <%= render partial: 'vacation_item', locals: {vacation: vacation} %>
