change header border and font colors, change vaca form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <% end %>
       </div>
       <div class="container-fluid col-sm-4">
-        <h2 class="text-center">Family Time</h2>
+        <h2 id="main-title" class="text-center">Family Time</h2>
       </div>
     </nav>
     <div class="main-container">
