--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,3 +122,19 @@ display: block;
   padding-top: 24px;
   padding-bottom: 24px;
 }
+
+.vacation-location-container {
+  margin-bottom: 20px;
+}
+
+.vacation-dates-container {
+  margin-right: auto;
+  margin-left: auto;
+  box-sizing: border-box;
+  max-width: 700px;
+}
+
+.dates-submit {
+  position: relative;
+  left: 15px;
+}
