--- a/app/views/vacations/_start_end_vacation.html.erb
+++ b/app/views/vacations/_start_end_vacation.html.erb
@@ -1,13 +1,15 @@
-<%= form_for(@vacation, {:method => 'put'}) do |f| %>
-  <div class="field">
-    <%= f.label 'Start' %>
-    <%= f.date_field :start %>
-  </div>
-  <div class="field">
-    <%= f.label 'End' %>
-    <%= f.date_field :end %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+<div class="vacation-dates-container col-lg-offset-2">
+<%= form_for(@vacation, {:method => 'put', :html => {class: "form-horizontal"}}) do |f| %>
+  <div class="form-group">
+      <%= f.label 'Start', class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.date_field :start, class: "form-control" %>
+      </div>
+      <%= f.label 'End', class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.date_field :end, class: "form-control" %>
+      </div>
+      <%= f.submit class: "dates-submit col-lg-offset-2 btn btn-primary btn-lg", value: "Set Dates" %>
   </div>
 <% end %>
+</div>
