--- a/app/views/vacations/show.html.erb
+++ b/app/views/vacations/show.html.erb
@@ -38,34 +38,6 @@
         <li><%= link_to topic.name, vacation_topic_path(@vacation, topic) %></li>
       <% end %>
     </ul>
-    <div class="all-comments-container">
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> NO world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello PEACE  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> stupid  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> PARTY world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> SOMETHING world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> hello world  </p>
-      <p> NEW world  </p>
-      <p> hello world  </p>
-    </div>
+    <div class="all-comments-container"></div>
   </div>
 </div>
