--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -153,9 +153,8 @@ display: block;
 
 .meal-item {
   display: flex;
-  flex: 1;
   flex-direction: column;
-  max-width: 170px;
+  width: 150px;
   min-height: 100px;
   border: 1px rgb(85, 172, 252) solid;
   justify-content: space-between;
