--- a/app/views/vacations/show.html.erb
+++ b/app/views/vacations/show.html.erb
@@ -1,36 +1,42 @@
-<p id="notice"><%= notice %></p>
-
-<div class="vacation-show-container">
+<div class="vacation-show-container col-md-12">
+  <p id="notice"><%= notice %></p>
   <div class="col-md-7 right-side">
     <h2 id="vacation-show-title" class="text-center"><%= @vacation.name %></h2>
 
-  <% if form_is_closed("Where/When") %>
-    <% if @vacation.has_start_and_end? %>
-      <h4 class="vacation-option text-center">Dates: <%= @vacation.start.strftime("%b %e") %> - <%= @vacation.end.strftime("%b %e") %></h4>
-    <% else %>
-      <%= render "start_end_vacation" %>
-    <% end %>
+    <div class="operations-container col-md-12">
+      <% if form_is_closed("Where/When") %>
+        <% if @vacation.has_start_and_end? %>
+          <h4 class="vacation-option text-center">Dates: <%= @vacation.start.strftime("%b %e") %> - <%= @vacation.end.strftime("%b %e") %></h4>
+        <% else %>
+          <%= render "start_end_vacation" %>
+        <% end %>
 
-    <% if @vacation.location %>
-      <h4 class="vacation-option text-center">Location: <%= @vacation.location %></h4>
-    <% else %>
-      <%= render "set_place" %>
-    <% end %>
-  <% else %>
-    <h4 class="vacation-option form-closed text-center">The 'Where/When' form must be closed before you can set the Date/Place</h4>
-  <% end %>
-
-  <div class="meals-container col-md-12">
-    <div class="meals-sub-container col-md-12">
-      <%= render ordered_resource(@vacation.meals) %>
+        <% if @vacation.location %>
+          <h4 class="vacation-option text-center">Location: <%= @vacation.location %></h4>
+        <% else %>
+          <%= render "set_place" %>
+        <% end %>
+      <% else %>
+        <h4 class="vacation-option form-closed text-center">The 'Where/When' form must be closed before you can set the Date/Place</h4>
+      <% end %>
     </div>
-  </div>
-
-    <p><%= link_to 'Guest List', vacation_guests_path(@vacation) %> </p>
-    <%= render @vacation.guests %>
-    </br>
-    <p><%= link_to 'Attractions', vacation_attractions_path(@vacation) %></p>
-    <%= render ordered_resource(@vacation.attractions) %>
+    <div class="meals-container col-md-12">
+      <div class="meals-sub-container col-md-12">
+        <%= render ordered_resource(@vacation.meals) %>
+      </div>
+    </div>
+    <div class="guest-attractions-container col-md-12">
+      <div class="attractions-container col-md-6">
+        <h4 class="text-center">Attractions</h4>
+        <%= render ordered_resource(@vacation.attractions) %>
+        <%= render "attractions/form" %>
+      </div>
+      <div class="guests-container col-md-6">
+        <h4 class="text-center">Guest List</h4>
+        <%= render @vacation.guests %>
+        <%= render "guests/form" %>
+      </div>
+    </div>
   </div>
   <div class="col-md-5 left-side">
     <ul class="topic-tabs nav nav-tabs nav-justified">
