--- a/app/views/guests/_form.html.erb
+++ b/app/views/guests/_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for([current_vacation, @guest]) do |f| %>
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %><br>
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %><br>
-    <%= f.submit %>
-<% end %>
+<div class="form-group col-sm-offset-1">
+  <%= form_for([current_vacation, @guest], :html => {class: "form-inline"}) do |f| %>
+    <div class="input-group">
+      <%= f.text_field :first_name, placeholder: "Full Name", class: "guest-input form-control input-sm" %>
+    </div>
+    <%= f.submit class: "btn btn-default btn-sm", value: "Add Guest" %>
+  <% end %>
+</div>
