--- a/app/views/meals/_meal.html.erb
+++ b/app/views/meals/_meal.html.erb
@@ -1,9 +1,9 @@
-<div class="meal-item">
-<p class="meal-time"><%= "#{meal.day.strftime("%A")} #{meal.day.strftime("%b")} #{meal.day.day.ordinalize}"%></p>
+<div class="meal-item thumbnail">
+<p class="meal-time card-text"><%= "#{meal.day.strftime("%A")} #{meal.day.strftime("%b")} #{meal.day.day.ordinalize}"%></p>
 
 <% if !meal.user_id && current_user.is_admin %>
     <%= render partial: 'meals/form', locals: {this_meal: meal}%>
 <% else %>
-  <p><%= meal.statement %></p>
+  <p class="card-text"><%= meal.statement %></p>
 <% end %>
 </div>
