--- a/app/views/vacations/_left_side.html.erb
+++ b/app/views/vacations/_left_side.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 </div>
 <div class="meals-container col-md-12">
-    <% if !@vacation.meals.empty? %>
+    <% if @vacation.meals.empty? %>
     <div class="meals-error-container col-md-12">
       <h3 class="text-center">Whoops! No vacation dates set yet<h3>
       <h4 class="text-center">Please set the vacation dates to see all the available meals!</h4>
