--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<h4><%= User.find(comment.user_id).full_name %></h4>
+<h5><%= current_user.full_name %></h5>
 <p><%= comment.content %></p>
 
 <% if is_own_comment?(comment) %>
@@ -7,4 +7,3 @@
 <% elsif has_superiority?(comment) %>
   <%= link_to 'Delete', [current_vacation, current_topic, comment], :confirm => 'Are you sure?', :method => :delete %>
 <% end %>
-<%= link_to 'Back', vacation_path(current_vacation) %>
